plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

def altBuildRoot = new File(System.getenv("LOCALAPPDATA") ?: System.getProperty("user.home"),
        "gradle-build/${rootProject.name}")
buildDir = altBuildRoot

group = 'com.exemplo'
version = '0.0.1-SNAPSHOT'
java {
    toolchain { languageVersion = JavaLanguageVersion.of(21) }
}

repositories { mavenCentral() }

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.security:spring-security-crypto:6.3.4'
     // OCR
    // implementation 'net.sourceforge.tess4j:tess4j:5.11.0' // wrapper do Tesseract   
    implementation 'org.bytedeco:opencv-platform:4.10.0-1.5.11' // OpenCV + nativos
    runtimeOnly 'org.postgresql:postgresql:42.7.4'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.withType(Test).configureEach { useJUnitPlatform() }
